# clear_teamcity_queue

./: .gitignore  README.md  azure-pipelines.yml  clear_teamcity_queue.py  docker-compose.yml  docker.txt  pyproject.toml  requirements.txt
clear_teamcity_queue/: clear_teamcity_queue.py  helpers.py
tests/: test_clear_teamcity_queue.py
