[tool.poetry]
name = "clear_teamcity_queue"
version = "0.1.0"
description = "Remove builds from TeamCity build queue"
authors = ["MatthewJDavis <matthewdavis111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
untangle = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
